# test

./: .env.example  .replit  API_COMMUNICATION_PROTOCOL.md  C_SERVER_SUCCESS.md  ESP32_DEPLOYMENT_GUIDE.md  ESP32_VISUAL_STUDIO_GUIDE.md  ESP32_WEB_DEPLOYMENT_GUIDE.md  FEATURES_AND_USAGE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MIGRATION_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  TECHNICAL_DOCUMENTATION.md  WINDOWS_SETUP.md  WINDOWS_TROUBLESHOOTING.md  demo_c_server.sh  demo_working_c_server.sh  esp32_main_integration.c  esp32_react_build_script.js  esp32_react_server.c  package-lock.json  package.json  replit.md  run-dev.js  run-project.sh  run_full_app.sh  start-simple.bat  start-windows.bat  start-windows.ps1  start.js  start.sh  start_dev.sh  start_server.sh  switch_server.sh
attached_assets/: Pasted--980-1003-Building-C-object-esp-idf-main-CMakeFiles-idf-main-dir-charging-station-handlers-c-obj--1749139369558_1749139369563.txt  Pasted--resource-c-Users-Juniors-Desktop-test-projectone-main-main-c-owner-cpp-severity-1749140946325_1749140946327.txt  Pasted-Windows-PowerShell-C-Microsoft-Corporation--1750857785487_1750857785489.txt  Pasted-Windows-PowerShell-C-Microsoft-Corporation--1750858324045_1750858324046.txt  (+1 more)
projectone/main/: CMakeLists.txt  Readmi.md  charging-station.css  charging-station.html  charging-station.js  charging_station_handlers.c  charging_station_handlers.h  config.json  idf_component.yml  main.c  master_slave_logic.c  master_slave_logic.h  page.html  script.js  simple_wifi.c  simple_wifi.h  style.css  udp_comm.c  udp_comm.h
(+107 files in other folders)
